scss/modules/_hero-image.scss
/*
 * Hero-image
 */

.hero-image {
  position: relative;
  width: 100%;
  height: 26em;
  height: 60vh;
  /* Следующие 2 параметра должны быть равны размеру изображения */
  max-width: 1208px;
  max-height: 800px;
  min-height: 18em;
  background-image: url("../images/guitar_black-bg-1920x1272.jpg");
  background: linear-gradient(to bottom, rgba(0,0,0,0.2),
                              rgba(0,0,0,0.8)),
              url("../images/guitar_black-bg-1920x1272.jpg");
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
}
.hero-image__content {
  padding: 3em;
  text-align: center;
  color: #f5f5a6;
}
.hero-image__content>h2 {
  font-size: 1.8em;
}
.hero-image__content>p {
  margin-top: 0.8em;
  margin-bottom: 1.2em;
}

